kiosk_cms/static/css/CSSpracticeWebsite.css
/*    NEW PALLET COLORS:    BLUE: #004459     GREEN: #1E8A6F    YELLOW: #F0D435     RED: #DE4831    ORANGE: #E37814   */
/*    Toms Shoes Hex Color Code #A4D7F4   */
/*    Taxi-cab yellow: #FFAA00      Central-Park green: #19A65C         Charcole:  #333333;      */
body {                                                  /*Body*/
  font-family: "Raleway";
  font-size: 16px;
  color: black;
  background-color: white;
}
h1 {                                                  /*Heading 1*/
  font-family: "Changa One";
  color: white;
  letter-spacing: 4px;
  font-size: 30px;
  background-color: none;
}
h2 {                                                  /*Heading 2*/
  font-family: "Raleway";
  margin-top: -30px;
  color: black;
  font-size: 30px;
  background-color: white;
  text-align: center;
  font-weight: bold;
  vertical-align: center;
}
h3 {                                                  /*Heading 3*/
  font-family: "Raleway";
  font-size: 20px;
  font-style: normal;
  color: black;
}
header {                                              /*Header*/
  background: #FFAA00;
  height: 80px;
  overflow: none;
  width: 100%;
}
header > h1 {
  display: inline-block;
}
p{                                                  /*Paragraphs*/
  color: black;
  padding: 10px 10px 10px 10px;
  font-size: 15px;
}
a {
  text-decoration: none;
  color: inherit;
}

input {                                              /*Form*/
  text-align: left;
  vertical-align: center;
  float: center;
  margin: 0 auto;
  padding-left: 33.33%;
  padding-bottom: 10px;
}
input[type = "text"]{                              /*Text input*/
  display: block;
  width: 50%;
  height: 40px;
  font-size: 20px;
  color: #DE4831;
  letter-spacing: 4px;
  vertical-align: center;
  float: center;
  opacity: 1.0;
  padding-left: 10px;
}
input[type = "email"]{                              /*Text input*/
  display: block;
  width: 50%;
  height: 40px;
  font-size: 20px;
  color: #DE4831;
  letter-spacing: 4px;
  vertical-align: center;
  float: center;
  opacity: 1.0;
  padding-left: 10px;
}
footer {
  background-color: #FFAA00;
  color: white;
  font-family: "Raleway";
  font-size: 18px;
  width: 100%;
  height: 70px;
}
footer > p {
  text-transform: uppercase;
  color: white;
  font-size: 13px;
  text-align: center;
  margin: auto;
  padding-top: 30px;
}
footer > p span  {
  opacity: 0.75;
}
#show-nyc {
  font-family: "Changa One";
  color: white;
  letter-spacing: 4px;
  font-size: 35px;
  width: 100%;
  text-align: center;
  margin: auto;
  margin-top: 20px;
}
/*Four page displays and headers*/                 /*Initial page display*/
#about {
  background-color: white;
  overflow: hidden;
}
#vote {
  display: block;
  background-color: white;
}
#gallery{
  background-color: white;
  height: 100%;
  display: block;
  overflow: hidden;
}
#submit{
  text-align: center;
}
.mobile {
  display: none;
  height: 100%;
  width: 80%;
  margin: 0 auto;
}
.info-text {
  margin-top: 70px;
  margin-bottom: 70px;
}
.info-text > h3, p{
  text-align: center;
}
.info-text > button {
  font-weight: 800;
  background-color: #DE4831;
  border: none;
  color: white;
  padding: 5px;

}
/*Buttons*/
.tabs {                                            /*Buttons class (.tabs)*/
    font-family: "Raleway";
    padding-top: 10px;
    text-align: center;
  }
/*Four buttons*/                                  /*Buttons*/
#voteButton{
    cursor: pointer;
    font-size: 20px;
    color: white;
    font-family: "Raleway";
    display: block;
    height: 30px;
    width: 75px;
  }
#submitButton{
    cursor: pointer;
    font-size: 20px;
    color: white;
    display: block;
    height: 30px;
    width: 100px;
  }
#galleryButton{
    cursor: pointer;
    font-size: 20px;
    color: white;
    display: block;
    height: 30px;
    width: 100px;
  }
#aboutButton{
    cursor: pointer;
    font-size: 20px;
    color: white;
    display: block;
    height: 30px;
    width: 90px;
  }
#share-buttons {                                 /*Share icon positioning*/
    margin-top: 100px;
    margin-left: 35px;
}
#share-buttons img {                             /*Share icon sizing*/
  width: 20px;
  height: 20px;
  padding: 10px;
}
.noselect {                                      /*No select class*/
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}
#submit h3 {                                     /*Submit section h3 headers*/
  letter-spacing: 2px;
  font-size: 20px;
}
.btn-style{                                       /*Submit Button*/
  font-family: "Raleway";
  border : dashed 2px #333333;
  font-size : 18px;
  color : #333333;
  letter-spacing: 3px;
  font-weight: 400;
  padding : 10px 30px;
  background-color : white;
  cursor: pointer;
  margin-top: 30px;
  text-transform: uppercase;
}
.btn-style:hover {                                /*Submit Button Hover*/
  font-family: "Raleway";
  border : solid 2px #DE4831;
  font-size : 18px;
  color : #DE4831;
  letter-spacing: 3px;
  font-weight: 400;
  padding : 10px 30px;
  background-color : white;
  cursor: pointer;
}
/*Menu*/
.menu {                                          /*Slide out menu*/
  background-color: #19A65C;
  height: 100%;
  cursor: default;
  position: fixed;
  top: 0;
  padding: 0;
  left: -300px;
  width: 300px; /*width of the menu*/
  z-index: 15;
}
.icon-close {                                   /*Menu slide out icon*/
  position: relative;
  font-size: 30px; /*size of the "Menu" text*/
  color: white;
  left: 15px;
  padding-top: -100px;
  }
.icon-close > h1 {
  font-size: 40px;
  margin-left: 35px;
}
.icon-menu {
  position: absolute;                              /*Menu banner*/
  margin-left: 40px;
  top: 4.5%;
  cursor: pointer;
}

.wrap {
    position: relative;
}
/* ... */

